cabal-version:       >=1.10

name:                alluvial
version:             0.1.0.0
synopsis:            Generates alluvial diagrams from types.
description:         Library to generate general alluvial diagrams from types, using latex as the backend.
bug-reports:         https://github.com/ymherklotz/alluvial-hs/issues
license:             GPL-3
license-file:        LICENSE
author:              Yann Herklotz
maintainer:          git@yannherklotz.com
copyright:           (c) 2020 Yann Herklotz
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable alluvial-hs
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14
  hs-source-dirs:      src
  default-language:    Haskell2010
